--- a/glue-factory/gluefactory/configs/superpoint+superglue_homography_tartan.yaml
+++ b/glue-factory/gluefactory/configs/superpoint+superglue_homography_tartan.yaml
@@ -1,13 +1,13 @@
 data:
-    name: homographies
-    data_dir: revisitop1m
-    train_size: 150000
-    val_size: 2000
-    batch_size: 128
-    num_workers: 4 # 14
+    name: homographiesTartan 
+    data_dir: syntheticForestData/imageData/
+    train_size: 40000 
+    val_size: 5000
+    batch_size: 32 
+    num_workers: 4 
     homography:
-        difficulty: 0.6
-        max_angle: 10
+        difficulty: 0.5
+        max_angle: 5
     photometric:
         name: lg
 model:
@@ -18,27 +18,27 @@ model:
         force_num_keypoints: True
         detection_threshold: 0.0
         nms_radius: 3
-        trainable: False
+        trainable: False 
     ground_truth:
         name: matchers.homography_matcher
         th_positive: 3
         th_negative: 3
     matcher:
-        name: matchers.lightglue
+        name: gluefactory_nonfree.superglue
         filter_threshold: 0.1
         flash: false
         checkpointed: true
 train:
-    seed: 0
-    epochs: 40
-    log_every_iter: 100
+    seed: 42
+    epochs: 60
+    log_every_iter: 250 # 100
     eval_every_iter: 500
-    lr: 1e-4
+    lr: 1e-4 
     lr_schedule:
-        start: 20
+        start: 45 
         type: exp
         on_epoch: true
-        exp_div_10: 10
+        exp_div_10: 45 # will be approx 0.8 decay
     plot: [5, 'gluefactory.visualization.visualize_batch.make_match_figures']
 benchmarks:
     hpatches:
