Updated homepage readme to have instructions and environment.yaml to make the conda env

--- a/glue-factory/gluefactory/configs/superpoint+lightglue_treedepth.yaml
+++ b/glue-factory/gluefactory/configs/superpoint+lightglue_treedepth.yaml
@@ -29,6 +29,7 @@ model:
         detection_threshold: 0.0
         nms_radius: 3
         trainable: False 
+        # image_mode: RGB
     matcher:
         name: matchers.lightglue
         filter_threshold: 0 
